# VChat

./: .gitignore  .gitmodules  README.md
client/: account.djinni  run_djinni.sh
client/android/: settings.gradle
client/android/app/: CMakeLists.txt  build.gradle
client/android/app/src/androidTest/java/com/vell/vchat/: ExampleInstrumentedTest.java
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/com/vell/vchat/: AccountAct.java  BaseApplication.java  GlobalValues.java  MainAct.java
client/android/app/src/main/java/com/vell/vchat/fragment/: AccountInfoFragment.java  BaseFragment.java  LoginFragment.java  SignupFragment.java
client/android/app/src/main/java/com/vell/vchat/utils/: PermissionsUtils.java
client/android/app/src/main/res/layout/: act_main.xml  dialog_loading.xml  frag_account_info.xml  frag_login.xml  frag_signup.xml  main_act.xml
client/android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
client/android/app/src/test/java/com/vell/vchat/: ExampleUnitTest.java
client/android/gradle/wrapper/: gradle-wrapper.properties
client/generated-protos/: account.grpc.pb.cc  account.grpc.pb.h  account.pb.cc  account.pb.h
client/generated-src/cpp/: account_info.hpp  account_interface.hpp  account_listener.hpp  account_resp.hpp  login_msg.hpp  refresh_token_msg.hpp  signup_msg.hpp  token_msg.hpp
client/generated-src/java/com/vell/chat/account/: AccountInfo.java  AccountInterface.java  AccountListener.java  AccountResp.java  LoginMsg.java  RefreshTokenMsg.java  SignupMsg.java  TokenMsg.java
client/generated-src/jni/: NativeAccountInfo.cpp  NativeAccountInfo.hpp  NativeAccountInterface.cpp  NativeAccountInterface.hpp  NativeAccountListener.cpp  NativeAccountListener.hpp  NativeAccountResp.cpp  NativeAccountResp.hpp  NativeLoginMsg.cpp  NativeLoginMsg.hpp  NativeRefreshTokenMsg.cpp  NativeRefreshTokenMsg.hpp  NativeSignupMsg.cpp  NativeSignupMsg.hpp  NativeTokenMsg.cpp  NativeTokenMsg.hpp
client/generated-src/objc/: SCAccountInfo+Private.h  SCAccountInfo+Private.mm  SCAccountInfo.h  SCAccountInfo.mm  SCAccountInterface+Private.h  SCAccountInterface+Private.mm  SCAccountInterface.h  SCAccountListener+Private.h  SCAccountListener+Private.mm  SCAccountListener.h  SCAccountResp+Private.h  SCAccountResp+Private.mm  SCAccountResp.h  SCAccountResp.mm  SCLoginMsg+Private.h  SCLoginMsg+Private.mm  SCLoginMsg.h  SCLoginMsg.mm  SCRefreshTokenMsg+Private.h  SCRefreshTokenMsg+Private.mm  SCRefreshTokenMsg.h  SCRefreshTokenMsg.mm  SCSignupMsg+Private.h  SCSignupMsg+Private.mm  SCSignupMsg.h  SCSignupMsg.mm  SCTokenMsg+Private.h  SCTokenMsg+Private.mm  SCTokenMsg.h  SCTokenMsg.mm
client/src/cpp/: AccountImpl.cpp  AccountImpl.h  GlobalValues.cpp  GlobalValues.h  Platform.h
client/src/cpp/datacenter/: AccountData.cpp  AccountData.h
client/src/cpp/include/: Platform.h
client/src/cpp/server/: AccountServer.cpp  AccountServer.h
client/src/cpp/service/: AccountService.cpp  AccountService.h
client/src/cpp/utils/: Config.h  FileUtils.cpp  FileUtils.h  ReadWriteLocker.cpp  StringUtils.cpp  StringUtils.h  TimeUtils.h
server/: .gitignore  CMakeLists.txt  Dockerfile  WORKSPACE  build_run.sh
server/account/: BUILD  CMakeLists.txt
server/account/protos/: account.proto
server/account/src/: AccountServiceImpl.cpp  AccountServiceImpl.h  GlobalValues.cpp  GlobalValues.h  account_server.cc  greeter_client.cc  greeter_server.cc
server/account/src/config/: GlobalConfig.cpp  GlobalConfig.h
server/account/src/data_manager/: BaseCache.h  BaseDB.h  CacheManager.cpp  CacheManager.h  DBManager.cpp  DBManager.h
server/account/src/data_manager/mysql/: MysqlDB.cpp  MysqlDB.h
server/account/src/data_manager/redis/: RedisCache.h
server/account/src/manager/: BaseCache.h  BaseDB.h  CacheManager.cpp  CacheManager.h  DBManager.cpp  DBManager.h
server/account/src/manager/mysql/: MysqlDB.cpp  MysqlDB.h
server/account/src/manager/redis/: RedisCache.cpp  RedisCache.h
server/account/src/model/: AccountModel.cpp  AccountModel.h
server/account/src/utils/: Config.cpp  Config.h  CryptUtils.cpp  CryptUtils.h  FileUtils.cpp  FileUtils.h  ReadWriteLocker.cpp  ReadWriteLocker.h  StringUtils.cpp  StringUtils.h  TimeUtils.cpp  TimeUtils.h
server/docker_workspace/: global_config.json  init_env.sh
server/docker_workspace/ca_cert/: 2_vchat.vell001.cf.crt  2_www.vell001.cf.crt  3_vchat.vell001.cf.key  3_www.vell001.cf.key  vchat.vell001.cf.csr  www.vell001.cf.csr
server/docker_workspace/local_cert/: client.key  client.pem  server.key  server.pem
server/libs/hiredis/: hiredis.bzl
server/libs/hiredis/bazel/: hiredis.BUILD
vchat_cert/: ca.key  ca.pem  ca.srl  client.csr  client.key  client.pem  server.csr  server.key  server.pem
